--- a/bioindex2.html
+++ b/bioindex2.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Wireless Patient Health Check</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Wireless Patient Health Check</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Virtual Doctor Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Virtual Doctor Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT ECG Heart Monitor System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT ECG Heart Monitor System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Ventilator using Arduino</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Ventilator using Arduino</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Controlled Robotic Arm</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Controlled Robotic Arm</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Paralysis Patient Health Care</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Paralysis Patient Health Care</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Watch for Elderly</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Watch for Elderly</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">GSM Patient Health Monitoring</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">GSM Patient Health Monitoring</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="bioindex3 .html">More title</a>
