--- a/bioindex4.html
+++ b/bioindex4.html
@@ -61,19 +61,19 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Alcohol & Health Monitoring</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Alcohol & Health Monitoring</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Based ICU Patient Monitoring</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Based ICU Patient Monitoring</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Based Monitoring System for Comatose Patients</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Based Monitoring System for Comatose Patients</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Instant Contactless Covid Testing Booth</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Instant Contactless Covid Testing Booth</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Covid Patient Health Monitor in Quarantine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Covid Patient Health Monitor in Quarantine</a>
                                 </li>
                             </ul>
                         </div>
