--- a/index-l1.html
+++ b/index-l1.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="indexA1.html">DUAL AXIS GRINDING</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DUAL AXIS GRINDING</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA2.html">GYM GENERATING ELECTRIC POWER</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">GYM GENERATING ELECTRIC POWER</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA3.html">WASTE FOOD SHREDDER COMPOST MAKER MACHINE</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">WASTE FOOD SHREDDER COMPOST MAKER MACHINE</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA14.html">POWER GENERATOR FOREARMS MACHINE</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">POWER GENERATOR FOREARMS MACHINE</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA13.html">AUTOMATIC FLIPPING PLATE MECHANISM</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AUTOMATIC FLIPPING PLATE MECHANISM</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA12.html">SILENT AIR PURIFIER & HUMIDIFIER</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">SILENT AIR PURIFIER & HUMIDIFIER</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA10.html">HEAD TILT CONTROLLED WHEELCHAIR FOR DISABLED</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">HEAD TILT CONTROLLED WHEELCHAIR FOR DISABLED</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA11.html">AIRPORT BAGGAGE DIVERTER SYSTEM USING QR</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AIRPORT BAGGAGE DIVERTER SYSTEM USING QR</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA9.html">BATTERY DRIVE MOTORIZED AGRICULTURE WEEDER</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">BATTERY DRIVE MOTORIZED AGRICULTURE WEEDER</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA8.html">All Weather Rain Proof Hubless eBike</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">All Weather Rain Proof Hubless eBike</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-l2.html">More title</a>
