--- a/index-ma10.html
+++ b/index-ma10.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Auto Motorized Crispy Dosa Maker Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto Motorized Crispy Dosa Maker Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Autonomous Theft Proof Delivery Robot For Food & Ecommerce</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Autonomous Theft Proof Delivery Robot For Food & Ecommerce</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Social Distancing & Mask Monitor Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Social Distancing & Mask Monitor Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of External Pipe Climbing Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of External Pipe Climbing Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Anti-Riot Drone with Tear Gas</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Anti-Riot Drone with Tear Gas</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Vibratory Screw Feeder Bowl</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Vibratory Screw Feeder Bowl</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Bead Ball Bearing Sorting Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Bead Ball Bearing Sorting Machine</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma11.html">More title</a>
