--- a/index-ma11.html
+++ b/index-ma11.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Scissor lift Shoes</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Scissor lift Shoes</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Expandable Transforming Ebike 1 to 3 Seater</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Expandable Transforming Ebike 1 to 3 Seater</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Waste Segregation System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Waste Segregation System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Power Saving System for Lathe</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Power Saving System for Lathe</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Automatic Pneumatic Ramming Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Automatic Pneumatic Ramming Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Emergency braking system in Four-Wheeler</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Emergency braking system in Four-Wheeler</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Air Powered Mini Wall Climbing Robot Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Air Powered Mini Wall Climbing Robot Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mini Hydraulic Hand Operated JIB Crane</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mini Hydraulic Hand Operated JIB Crane</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma12.html">More title</a>
