--- a/index-ma12.html
+++ b/index-ma12.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">20 Litre Jar Automatic Cleaning and Washing machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">20 Litre Jar Automatic Cleaning and Washing machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Automobile Brake Failure Indicator with Buzzer</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Automobile Brake Failure Indicator with Buzzer</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Multipurpose Agricultural Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Multipurpose Agricultural Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design of Low-Cost Refrigeration System using LPG</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design of Low-Cost Refrigeration System using LPG</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Dual Side Shaper Machine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Dual Side Shaper Machine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Stirling Engine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Stirling Engine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Scissor Lift Jack Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Scissor Lift Jack Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Power Generation using Speed Breakers</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Power Generation using Speed Breakers</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma13.html">More title</a>
