--- a/index-ma2.html
+++ b/index-ma2.html
@@ -61,37 +61,37 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Regenerative Braking System Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Regenerative Braking System Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Silent Air Purifier & Humidifier</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Silent Air Purifier & Humidifier</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flamethrower & Extinguisher RC Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flamethrower & Extinguisher RC Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Auto Paper Cutter Machine by Geneva Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto Paper Cutter Machine by Geneva Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automated Portable Hammering Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automated Portable Hammering Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Head Tilt Controlled Wheelchair for Disabled</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Head Tilt Controlled Wheelchair for Disabled</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Electricity Generator Tiles Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Electricity Generator Tiles Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Sand Filtering Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Sand Filtering Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">RC Solar Lake Pool Cleaner Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">RC Solar Lake Pool Cleaner Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360 Degree Flexible Drilling Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360 Degree Flexible Drilling Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Advanced Mosquito Killer Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Advanced Mosquito Killer Machine</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma3.html">More titles</a>
