--- a/index-ma3.html
+++ b/index-ma3.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Ventilator using Arduino For Covid Pandemic</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Ventilator using Arduino For Covid Pandemic</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Three Axis CNC Machine 1 Meter x 2 Meter</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Three Axis CNC Machine 1 Meter x 2 Meter</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Airport Baggage Diverter System using QR</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Airport Baggage Diverter System using QR</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Oil Skimmer RC Boat</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Oil Skimmer RC Boat</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Oxygen Concentrator Generator For Covid 19</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Oxygen Concentrator Generator For Covid 19</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Electromagnetic Coil Gun 3 Stage</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Electromagnetic Coil Gun 3 Stage</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Coil Winding Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Coil Winding Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Off Road Adventure Robot with Action Camera</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Off Road Adventure Robot with Action Camera</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Food Shredder Compost Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Food Shredder Compost Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Indoor Farming Hydroponic Plant Grow Tent</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Indoor Farming Hydroponic Plant Grow Tent</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma2.html">More titles</a>
