--- a/index-ma4.html
+++ b/index-ma4.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Egg Breaker & Yolk Separator Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Egg Breaker & Yolk Separator Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Self Folding Dining Table</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Self Folding Dining Table</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">RC Underwater Exploration Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">RC Underwater Exploration Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">SeaWave Power Generator With Solar</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">SeaWave Power Generator With Solar</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Sustainable Fishing Drone Without Bycatch</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Sustainable Fishing Drone Without Bycatch</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Portable Electric Power Tiller Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Portable Electric Power Tiller Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Self Charging Solar Powered Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Self Charging Solar Powered Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Auto IV Pole with IV Bag Refill Alert</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto IV Pole with IV Bag Refill Alert</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pesticide Sprayer & COVID Sanitization Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pesticide Sprayer & COVID Sanitization Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Thermal Vision RC Robotic Tank</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Thermal Vision RC Robotic Tank</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma5.html">More titles</a>
