--- a/index-ma5.html
+++ b/index-ma5.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Dual Side Potato Fries Maker Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Dual Side Potato Fries Maker Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized 4 Way Hacksaw</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized 4 Way Hacksaw</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mattress Deep Cleaning Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mattress Deep Cleaning Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Potato Peeling Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Potato Peeling Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Wind & Solar Mobile Charging Station</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Wind & Solar Mobile Charging Station</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Portable 3 in 1 Car Washer & Wiper</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Portable 3 in 1 Car Washer & Wiper</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Remote Controlled Mini Forklift</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Remote Controlled Mini Forklift</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Portable Air Compressor with Auto Cutoff</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Portable Air Compressor with Auto Cutoff</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Floating Sun Tracker Hydraulic Solar Panel</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Floating Sun Tracker Hydraulic Solar Panel</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Rough Terrain Vehicle Using Rocker Bogie Mechan</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Rough Terrain Vehicle Using Rocker Bogie Mechanhttps://wa.me/+918074744190"></a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma6.html">More titles</a>
