--- a/index-ma7.html
+++ b/index-ma7.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">70.Motorized Vegetable Cutter Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">70.Motorized Vegetable Cutter Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">71.Electric Adventure Tour Bike</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">71.Electric Adventure Tour Bike</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">72.Pneumatic Metal Sheet Bending Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">72.Pneumatic Metal Sheet Bending Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">73.Mini Bench Saw Machine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">73.Mini Bench Saw Machine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">74.Indoor Racing Drone with Action Camera</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">74.Indoor Racing Drone with Action Camera</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Chain Link Wire Mesh Making Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chain Link Wire Mesh Making Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">76.Rough Terrain 3 Wheel Electric Bike</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">76.Rough Terrain 3 Wheel Electric Bike</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">77.Automatic Wire Cutter And Stripper Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">77.Automatic Wire Cutter And Stripper Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">78.Automatic Sugarcane Bud Cutter Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">78.Automatic Sugarcane Bud Cutter Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">79.Automated Drain/Gutter Cleaner Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">79.Automated Drain/Gutter Cleaner Project</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma8.html">More titles</a>
