--- a/index-ma8.html
+++ b/index-ma8.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic MotorBike Stand Slider</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic MotorBike Stand Slider</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Hydraulic Sheet Metal Bending Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Hydraulic Sheet Metal Bending Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">All Weather Rain Proof Hubless Ebike</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">All Weather Rain Proof Hubless Ebike</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Unique Hubless Ebike With Suspension</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Unique Hubless Ebike With Suspension</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Anti Riot Shield With Pepper Spray & Blinding</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Anti Riot Shield With Pepper Spray & Blinding</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Seed Sowing Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Seed Sowing Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360° Aerial Surveillance UAV With IOT Camera</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360° Aerial Surveillance UAV With IOT Camera</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360° Filmmaking Drone For 4K HD Video</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360° Filmmaking Drone For 4K HD Video</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Solar Outdoor Air Purifier & Air Quality Monitor</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Solar Outdoor Air Purifier & Air Quality Monitor</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Fire Extinguisher & Fire Fighting Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Fire Extinguisher & Fire Fighting Drone</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma9.html">More titles</a>
