--- a/index-ma9.html
+++ b/index-ma9.html
@@ -61,37 +61,37 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Football Shooter Soccer Ball Launcher Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Football Shooter Soccer Ball Launcher Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mini Conveyor Belt Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mini Conveyor Belt Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Enhanced Vertical Windmill System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Enhanced Vertical Windmill System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Drone Catcher | Net Thrower</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Drone Catcher | Net Thrower</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Semi Automatic Back Massager Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Semi Automatic Back Massager Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Arm Mounted Hammer Drill Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Arm Mounted Hammer Drill Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Arm Hammer Attachment With Nail Puller</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Arm Hammer Attachment With Nail Puller</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360° Welding Cutting Rotary Turn Table Positioner</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360° Welding Cutting Rotary Turn Table Positioner</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360° Welding Cutting Rotary Turn Table Positioner</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360° Welding Cutting Rotary Turn Table Positioner</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Portable PPE Kit Sterilizer Ozone + UV</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Portable PPE Kit Sterilizer Ozone + UV</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Thermal Screening Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Thermal Screening Drone</a>
                                 </li>
                             </ul>
                         </div>
