--- a/index-mi1.html
+++ b/index-mi1.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">5 Speed Gearbox Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">5 Speed Gearbox Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mechanical Bird Flapping Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mechanical Bird Flapping Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized Power Steering Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Power Steering Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Dual Axis Vehicle Steering Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Dual Axis Vehicle Steering Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Leaf Spring Chassis for Construction Trucks</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Leaf Spring Chassis for Construction Trucks</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Bucket Conveyor</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Bucket Conveyor</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Chain Link Wire Mesh Making Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chain Link Wire Mesh Making Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized Spring Assist Mashing Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Spring Assist Mashing Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Inclined Cam Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Inclined Cam Mechanism</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-mi2.html">More title</a>
