--- a/index-mi3.html
+++ b/index-mi3.html
@@ -67,25 +67,25 @@
                                     <a class="titles" href="">Motorized Vegetable Cutter Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mini Bench Saw Machine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mini Bench Saw Machine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Fog Maker Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Fog Maker Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Bubble Maker With Speed Control</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Bubble Maker With Speed Control</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Regenerative Braking System Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Regenerative Braking System Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">3 DOF Hydraulic Extractor Mini JCB</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">3 DOF Hydraulic Extractor Mini JCB</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Steam Powered Electricity Generator</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Steam Powered Electricity Generator</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication of Motorized Water Pump</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of Motorized Water Pump</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-mi4.html">More title</a>
