--- a/index-mi4.html
+++ b/index-mi4.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication on Mini Lathe Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication on Mini Lathe Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication of Mini Hydraulic Jack</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of Mini Hydraulic Jack</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication of Mini Air Pump</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of Mini Air Pump</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication of Mini Air Blower</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of Mini Air Blower</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Single Stage Gear Reducer Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Single Stage Gear Reducer Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Mechanical Garage Door Opener</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Mechanical Garage Door Opener</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automated Portable Hammering Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automated Portable Hammering Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Remote Controlled Mini Forklift</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Remote Controlled Mini Forklift</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Torque Generator Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Torque Generator Mechanism</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-mi5.html">More title</a>
