--- a/indexagr2.html
+++ b/indexagr2.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">A Project on Automatic Lawn Mover</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">A Project on Automatic Lawn Mover</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Project on Banana Fiber Extracting Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">A Project on Banana Fiber Extracting Machine</a>
                                     </a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Project on Fabrication of low cost harvesting machine
+                                    <a class="titles" href="https://wa.me/+918074744190">A Project on Fabrication of low cost harvesting machine
                                     </a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Project on Portable vegetable Cutter and Slicer</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">A Project on Portable vegetable Cutter and Slicer</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Project on Solar Seed Dryer with Multiple PCM
+                                    <a class="titles" href="https://wa.me/+918074744190">A Project on Solar Seed Dryer with Multiple PCM
                                     </a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Agricultural Motor Pump Running using Solar Power</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Agricultural Motor Pump Running using Solar Power</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Agricultural Paddy Cleaning System by using Solar Power</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Agricultural Paddy Cleaning System by using Solar Power</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Areca Nut Tree Climbing and Cutting Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Areca Nut Tree Climbing and Cutting Machine</a>
                                 </li>
                                 <li class="items">
                                     <a class="title" href="indexagr3.html">More titles</a>
