--- a/indexai.html
+++ b/indexai.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Chatbot Assistant System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chatbot Assistant System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Dental Caries Detection System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Dental Caries Detection System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Movie Success Prediction System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Movie Success Prediction System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Speech Emotion Detection System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Speech Emotion Detection System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Use of Pose Estimation in Elderly People using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Use of Pose Estimation in Elderly People using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Music Genres Classification using KNN System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Music Genres Classification using KNN System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Traffic Sign Recognition System using CNN</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Traffic Sign Recognition System using CNN</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Auto capture Selfie by Detecting Smile Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto capture Selfie by Detecting Smile Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Face Recognition Attendance System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Face Recognition Attendance System using Python</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="indexai1.html">More titles</a>
