--- a/indexai1.html
+++ b/indexai1.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">AI intelligent Chat Bot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI intelligent Chat Bot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AI Desktop Partner</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Desktop Partner</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AI Intelligent Tourist System Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Intelligent Tourist System Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Attendance System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Attendance System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Website Evaluation Using Opinion Mining</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Website Evaluation Using Opinion Mining</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Student Information Chatbot Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Student Information Chatbot Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Question paper generator system</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Question paper generator system</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Online AI Shopping With M-Wallet System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Online AI Shopping With M-Wallet System</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="indexai2.html">More titles</a>
