--- a/indexai3.html
+++ b/indexai3.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Personality Prediction System Through CV Analysis</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Personality Prediction System Through CV Analysis</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Price Negotiator Ecommerce ChatBot System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Price Negotiator Ecommerce ChatBot System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Your Personal Nutritionist Using FatSecret API</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Your Personal Nutritionist Using FatSecret API</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Customer Focused Ecommerce Site With AI Bot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Customer Focused Ecommerce Site With AI Bot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android General Knowledge Chatbot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android General Knowledge Chatbot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Customer Targeted E-Commerce</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Customer Targeted E-Commerce</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Read Me My Book App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Read Me My Book App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Artificial Intelligence HealthCare Chatbot System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Artificial Intelligence HealthCare Chatbot System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Facial Emotion Recognition and Detection in Python using Deep Learning</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Facial Emotion Recognition and Detection in Python using Deep Learning</a>
                                 </li>
                             </ul>
                         </div>
