--- a/indexavr.html
+++ b/indexavr.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Shopping Trolley that Follows Customer</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Shopping Trolley that Follows Customer</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Programmable Omni Direction Robotic Arm Vehicle</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Programmable Omni Direction Robotic Arm Vehicle</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Car Safety System With Airbag Notification</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Car Safety System With Airbag Notification</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Noise Level Monitor & Controller System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Noise Level Monitor & Controller System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Covid Patient Health Monitor in Quarantine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Covid Patient Health Monitor in Quarantine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Garbage Monitoring Using Raspberry Pi</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Garbage Monitoring Using Raspberry Pi</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Third Eye For Blind Ultrasonic Vibrator Glove</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Third Eye For Blind Ultrasonic Vibrator Glove</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Women Safety Night Patrolling Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Women Safety Night Patrolling Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Auto Water Pump Switcher</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto Water Pump Switcher</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexavr1.html">More titles</a>
