--- a/indexavr1.html
+++ b/indexavr1.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Water Pollution Monitoring RC Boat</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Water Pollution Monitoring RC Boat</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Zigbee based Wireless Home Security System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Zigbee based Wireless Home Security System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Intelligent Surveillance and Night Patrolling Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Intelligent Surveillance and Night Patrolling Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Waste Segregation System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Waste Segregation System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Arduino based Snake Robot Controlled using Android Application</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Arduino based Snake Robot Controlled using Android Application</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">132.Auto Selection of any Available Phase in 3 Phase Supply System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">132.Auto Selection of any Available Phase in 3 Phase Supply System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Door Receptionist with Smart Lock</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Door Receptionist with Smart Lock</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Stand-up wheelchair using Raspberry Pi & RF</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Stand-up wheelchair using Raspberry Pi & RF</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexavr2.html">More titles</a>
