--- a/indexavr2.html
+++ b/indexavr2.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Arduino Based Autonomous Fire Fighting Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Arduino Based Autonomous Fire Fighting Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Raspberry Pi Vehicle Anti-Theft Face Recognition System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Raspberry Pi Vehicle Anti-Theft Face Recognition System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Home Air Quality Monitoring System Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Home Air Quality Monitoring System Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Crop Protection System From Animals PIC</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Crop Protection System From Animals PIC</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Plant Soil Moisture & Ph Sensing Alarm Using 8051</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Plant Soil Moisture & Ph Sensing Alarm Using 8051</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Early Flood Detection & Avoidance</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Early Flood Detection & Avoidance</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motion Controlled Pick & Place Obstacle Avoider Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motion Controlled Pick & Place Obstacle Avoider Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Raspberry Pi based Weather Reporting Over IOT</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Raspberry Pi based Weather Reporting Over IOT</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexavr3.html">More titles</a>
