--- a/indexavr3.html
+++ b/indexavr3.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">1Vertical Axis Wind Turbine With Inverter</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">1Vertical Axis Wind Turbine With Inverter</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Rotating Solar Inverter Project using Microcontroller 50W</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Rotating Solar Inverter Project using Microcontroller 50W</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Arduino Covid Disinfection Box</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Arduino Covid Disinfection Box</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AI Bartender Cocktail Maker Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Bartender Cocktail Maker Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Dog Daycare Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Dog Daycare Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Dual Mount Auto Sanitizer Dispenser</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Dual Mount Auto Sanitizer Dispenser</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Auto Indoor Hydroponic Fodder Grow Chamber</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Auto Indoor Hydroponic Fodder Grow Chamber</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Thermal Screening Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Thermal Screening Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Portable PPE Kit Sterilizer Ozone + UV</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Portable PPE Kit Sterilizer Ozone + UV</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexavr4.html">More titles</a>
