--- a/indexavr4.html
+++ b/indexavr4.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Syringe Infusion Pump</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Syringe Infusion Pump</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Smart Parking Using RFID</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Smart Parking Using RFID</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Solar Outdoor Air Purifier & Air Quality Monitor</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Solar Outdoor Air Purifier & Air Quality Monitor</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Fire Extinguisher & Fire Fighting Drone</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Fire Extinguisher & Fire Fighting Drone</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Garbage Segregator & Bin Level Indicator</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Garbage Segregator & Bin Level Indicator</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Fog Disinfection Handwash Machine To Save Water</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Fog Disinfection Handwash Machine To Save Water</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">IOT Temperature & Mask Scan Entry System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">IOT Temperature & Mask Scan Entry System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Semi Automatic Back Massager Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Semi Automatic Back Massager Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Indoor Farming Hydroponic Plant Grow Chamber</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Indoor Farming Hydroponic Plant Grow Chamber</a>
                                 </li>
                             </ul>
                         </div>
