--- a/indexcse-1.html
+++ b/indexcse-1.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">AI Healthcare Bot System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Healthcare Bot System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">ShareBook App Android Book Sharing Application</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">ShareBook App Android Book Sharing Application</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Travel Together A Travel Buddy Finder System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Travel Together A Travel Buddy Finder System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Travel and Tourism Website using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Travel and Tourism Website using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href=">Android Grocery Management App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Grocery Management App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Local Geofence System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Local Geofence System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Digital Scrabble Word Dictionary Game Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Digital Scrabble Word Dictionary Game Python</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexcse-7.html">More titles</a>
                                 </li>
