--- a/indexcse-2.html
+++ b/indexcse-2.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Biometric Student Attendance System App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Biometric Student Attendance System App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Music and Shows Finder Flutter App </a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Music and Shows Finder Flutter App </a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Timer Based Phone Silencer App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Timer Based Phone Silencer App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Face Recognition Attendance System for Employees using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Face Recognition Attendance System for Employees using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Carpool Ride Sharing App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Carpool Ride Sharing App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Staff Scheduling Android App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Staff Scheduling Android App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Smart Bus Pass App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Smart Bus Pass App</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexcse-8.html">More titles</a>
                                 </li>
