--- a/indexcse-3.html
+++ b/indexcse-3.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Library Management System Using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Library Management System Using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Heart Failure Prediction System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Heart Failure Prediction System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Python Doctor Appointment Booking System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Python Doctor Appointment Booking System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Yoga Poses Detection using OpenPose</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Yoga Poses Detection using OpenPose</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Credit Card Fraud Detection System Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Credit Card Fraud Detection System Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AI Mental Health Therapist Chatbot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Mental Health Therapist Chatbot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Campus Surveillance and Guidance System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Campus Surveillance and Guidance System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automated College Timetable Generator</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automated College Timetable Generator</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Intelligent Mobile Travel Guide Flutter App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Intelligent Mobile Travel Guide Flutter App</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexcse9.html">More titles</a>
                                 </li>
