--- a/indexcse-5.html
+++ b/indexcse-5.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">AI Chatbot App using Dialog Flow in Flutter</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AI Chatbot App using Dialog Flow in Flutter</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flutter Based Calories Tracker App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flutter Based Calories Tracker App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flutter Based House Bidding Application</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flutter Based House Bidding Application</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flutter Medicine Tracker and Notification App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flutter Medicine Tracker and Notification App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flutter Payment Reminder App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flutter Payment Reminder App</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">YouTube Giveaway Manager App Using Flutter</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">YouTube Giveaway Manager App Using Flutter</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Vehicle Number Plate Detection and Recognition Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Vehicle Number Plate Detection and Recognition Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Green Screen Background Remover using OpenCV Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Green Screen Background Remover using OpenCV Python</a>
                                 </li>
                             </ul>
                         </div>
