--- a/indexcse-7.html
+++ b/indexcse-7.html
@@ -59,23 +59,23 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Chatbot Assistant System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chatbot Assistant System using Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Child Vaccination Management System using Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Child Vaccination Management System using Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Dental Caries Detection System using Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Dental Caries Detection System using Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Blockchain based Cloud File Sharing System</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Blockchain based Cloud File Sharing System</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Movie Success Prediction System using Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Movie Success Prediction System using Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Blockchain-based Transaction and Settlement System</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Blockchain-based Transaction and Settlement System</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Blockchain based Merchant Payment System</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Blockchain based Merchant Payment System</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Face Recognition Attendance System using Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Face Recognition Attendance System using Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Human Detector and Counter using Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Human Detector and Counter using Python</a>
                                 </li>
                             </ul>
                         </div>
