--- a/indexcse-8.html
+++ b/indexcse-8.html
@@ -59,23 +59,23 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumonia Detection using Chest X-Ray</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumonia Detection using Chest X-Ray</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Music Recommendation System by Facial Emotion</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Music Recommendation System by Facial Emotion</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Lost Item Tracker App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Lost Item Tracker App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Periodic Bell & Timetable Reminder App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Periodic Bell & Timetable Reminder App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Blockchain Based Crowdfunding Platform</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Blockchain Based Crowdfunding Platform</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Elevator Saga: Fun Game Flutter App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Elevator Saga: Fun Game Flutter App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Hangman Game: Vocabulary Building Flutter App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Hangman Game: Vocabulary Building Flutter App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">AI-Based Picture Translation App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">AI-Based Picture Translation App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">EV Charging Station Finder and Slot Booking Flutter</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">EV Charging Station Finder and Slot Booking Flutter</a>
                                 </li>
                             </ul>
                         </div>
