--- a/indexcse9.html
+++ b/indexcse9.html
@@ -59,23 +59,23 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Spy Camera Android App</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Spy Camera Android App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Python Image Forgery Detection using MD5 OpenCV</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Python Image Forgery Detection using MD5 OpenCV</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Bank Beacon Android App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Bank Beacon Android App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Android Heart Disease Prediction App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Android Heart Disease Prediction App</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Android Geofencing App for COVID Quarantine</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Android Geofencing App for COVID Quarantine</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Online Nursery Plant Shopping Website Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Online Nursery Plant Shopping Website Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Knee Osteoarthritis Detection & Severity Prediction</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Knee Osteoarthritis Detection & Severity Prediction</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Space Shooter Combat Game Python</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Space Shooter Combat Game Python</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">Dementia Virtual Memory App</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">Dementia Virtual Memory App</a>
                                 </li>
                             </ul>
                         </div>
