--- a/indexdr.html
+++ b/indexdr.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Solar Wireless Electric Vehicle Charging System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Solar Wireless Electric Vehicle Charging System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Ebike Speed Controller System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Ebike Speed Controller System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Power Efficient Mini Inverter Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Power Efficient Mini Inverter Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Wireless Mobile Charging Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Wireless Mobile Charging Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">3 Phase Induction Motor With Soft Start</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">3 Phase Induction Motor With Soft Start</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Advanced Wireless Power Transfer System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Advanced Wireless Power Transfer System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">6 Volt DC to 10 Volt DC Converter</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">6 Volt DC to 10 Volt DC Converter</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexdr1.html">More titles</a>
