--- a/indexdr1.html
+++ b/indexdr1.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Ac to High Voltage DC Using Voltage Multiplier Circuit</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Ac to High Voltage DC Using Voltage Multiplier Circuit</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Microcontroller less Four Quadrant DC Motor Control</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Microcontroller less Four Quadrant DC Motor Control</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Power Efficient Mini Inverter Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Power Efficient Mini Inverter Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Wireless Battery Charging With Charge Monitor Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Wireless Battery Charging With Charge Monitor Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Accurate Room Temperature Controller Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Accurate Room Temperature Controller Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AC Power Strength Controller System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AC Power Strength Controller System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">System To Measure Solar Power</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">System To Measure Solar Power</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexdr2.html">More titles</a>
