--- a/indexdr2.html
+++ b/indexdr2.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Controlling Solar Energy Charge</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Controlling Solar Energy Charge</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Single Phase Induction Motor With Smooth Start</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Single Phase Induction Motor With Smooth Start</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Configurable Password Security System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Configurable Password Security System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Load Control System Using DTMF</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Load Control System Using DTMF</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">RPM Display For BLDC Motor With Speed Controller</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">RPM Display For BLDC Motor With Speed Controller</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">AC Power Controller With Programmable Interface</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">AC Power Controller With Programmable Interface</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Lamp Illumination Control With Precision</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Lamp Illumination Control With Precision</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Digitally Controlled Home Automation Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Digitally Controlled Home Automation Project</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexdr3.html">More titles</a>
