--- a/indexdr3.html
+++ b/indexdr3.html
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Flexible Ac Transmitter System Using TSR</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flexible Ac Transmitter System Using TSR</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Device Load Monitor With Programmable Meter For Energy Audit</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Device Load Monitor With Programmable Meter For Energy Audit</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Power Meter billing Plus Load Control Using GSM</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Power Meter billing Plus Load Control Using GSM</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Monthly Electricity Billing Display With Bill SMS Feature</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Monthly Electricity Billing Display With Bill SMS Feature</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Commercial Power Saver Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Commercial Power Saver Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Fast Voting Game Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Fast Voting Game Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Electronic Water Level Controller Device</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Electronic Water Level Controller Device</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">E Bicycle Locking Syste</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">E Bicycle Locking Syste</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexdr4.html">More titles</a>
