--- a/indexdr4.html
+++ b/indexdr4.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Smoke Detector Alarm</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Smoke Detector Alarm</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Synchronously Blinking Emergency Light</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Synchronously Blinking Emergency Light</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Sound Operated Timer Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Sound Operated Timer Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Burglar Alarm</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Burglar Alarm</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Analysis, Design, Modeling, and Control of an Interleaved- Boost Full-Bridge Three-Port Converter for Hybrid Renewable Energy Systems.</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Analysis, Design, Modeling, and Control of an Interleaved- Boost Full-Bridge Three-Port Converter for Hybrid Renewable Energy Systems.</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Flyback-Based Three-Port Topologies for Electrolytic Capacitor-Less LED Drivers)</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Flyback-Based Three-Port Topologies for Electrolytic Capacitor-Less LED Drivers)</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Single-Switch AC–DC LED Driver Based on a Boost- Flyback PFC Converter with Lossless Snubber</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">A Single-Switch AC–DC LED Driver Based on a Boost- Flyback PFC Converter with Lossless Snubber</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="indexdr5.html">More titles</a>
