--- a/indexmbs1.html
+++ b/indexmbs1.html
@@ -59,23 +59,23 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">MARKETING STRATEGY OF HERO HONDA LIMITED</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF HERO HONDA LIMITED</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">PROMOTIONAL STRATEGY ADOPTED BY TUPPERWARE</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">PROMOTIONAL STRATEGY ADOPTED BY TUPPERWARE</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY ON POLICY BAZAAR</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY ON POLICY BAZAAR</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY OF HCL INFO SYSTEM</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF HCL INFO SYSTEM</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">SALES AND DISTRIBUTION OF HUL PRODUCTS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">SALES AND DISTRIBUTION OF HUL PRODUCTS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">TO ANALYSE THE COKE DISTRIBUTION IN TERRITORY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">TO ANALYSE THE COKE DISTRIBUTION IN TERRITORY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">STUDY OF NEW PRODUCT DEVELOPMENT OF FROOTI</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">STUDY OF NEW PRODUCT DEVELOPMENT OF FROOTI</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CUSTOMERS SATISFACTION LEVEL OF PIZZA HUT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CUSTOMERS SATISFACTION LEVEL OF PIZZA HUT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MUTUAL FUND INDUSTRY IN INDIA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MUTUAL FUND INDUSTRY IN INDIA</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs2.html">More titles</a>
                                 </li>
