--- a/indexmbs2.html
+++ b/indexmbs2.html
@@ -59,21 +59,21 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">CONSUMER BUYING BEHAVIOR TOWARDS PAINT SEGMENT</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">CONSUMER BUYING BEHAVIOR TOWARDS PAINT SEGMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">NEED OF FINANCIAL ADVISORS FOR MUTUAL FUND INVESTORS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">NEED OF FINANCIAL ADVISORS FOR MUTUAL FUND INVESTORS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER BUYING BEHAVIOR J.K. TYRE</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER BUYING BEHAVIOR J.K. TYRE</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER PERCEPTION OF MOHAN MEAKIN</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER PERCEPTION OF MOHAN MEAKIN</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER AWARENESS ON BAJAJ LPG AUTO’S</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER AWARENESS ON BAJAJ LPG AUTO’S</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY ADOPTED BY BYJU’S</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY ADOPTED BY BYJU’S</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">INVESTMENT MANAGEMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">INVESTMENT MANAGEMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">INBOUND MARKETING STRATEGY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">INBOUND MARKETING STRATEGY</a>
                                     <li class="items"><a class="title" href="indexmbs3.html">More titles</a>
                                     </li>
                             </ul>
