--- a/indexmbs4.html
+++ b/indexmbs4.html
@@ -58,21 +58,21 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">A STUDY OF MARKET POTENTIAL OF DABUR HONEY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY OF MARKET POTENTIAL OF DABUR HONEY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">COMPRATIVE ANALYSIS BETWEEN SAKHI AND FEMINA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">COMPRATIVE ANALYSIS BETWEEN SAKHI AND FEMINA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER AWARENESS ON BAJAJ LPG AUTO’S</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER AWARENESS ON BAJAJ LPG AUTO’S</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON MARKETING STRATEGIES OF FLIPKART BASED ON ELECTRONIC GOODS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON MARKETING STRATEGIES OF FLIPKART BASED ON ELECTRONIC GOODS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">STUDY ON MARKETING STRATEGY OF PHARMACEUTICAL INDUSTRY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">STUDY ON MARKETING STRATEGY OF PHARMACEUTICAL INDUSTRY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CUSTOMER BUYING BEHAVIOR AYURVEDIC PRODUCT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CUSTOMER BUYING BEHAVIOR AYURVEDIC PRODUCT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY ADOPTED BY BYJU’S</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY ADOPTED BY BYJU’S</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">INVESTMENT MANAGEMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">INVESTMENT MANAGEMENT</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs5.html">More titles</a>
                                 </li>
