--- a/indexmbs5.html
+++ b/indexmbs5.html
@@ -58,21 +58,21 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">STUDY ON MARKETING STRATEGY OF PHARMACEUTICAL INDUSTRY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">STUDY ON MARKETING STRATEGY OF PHARMACEUTICAL INDUSTRY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON SALES PROMOTION OF HOME FURNISHINGS AT FERROR DEK PVT. LTD</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON SALES PROMOTION OF HOME FURNISHINGS AT FERROR DEK PVT. LTD</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">OPERATIONAL PROCEDURE OF ADVERTISING AGENCY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">OPERATIONAL PROCEDURE OF ADVERTISING AGENCY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON THE CONSUMPTION OF OTT PLATFORMS AMONG YOUTH</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON THE CONSUMPTION OF OTT PLATFORMS AMONG YOUTH</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">FACTORS INFLUENCING THE RAISE OF OTT PLATFORM OVER TRADITIONAL PLATFORMS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">FACTORS INFLUENCING THE RAISE OF OTT PLATFORM OVER TRADITIONAL PLATFORMS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON IMPACT OF SOCIAL MEDIA MARKETING STRATEGIES ON CONSUMER BUYING BEHAVIOUR</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON IMPACT OF SOCIAL MEDIA MARKETING STRATEGIES ON CONSUMER BUYING BEHAVIOUR</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">INBOUND MARKETING STRATEGY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">INBOUND MARKETING STRATEGY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON NETWORK MARKETING</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON NETWORK MARKETING</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs6.html">More titles</a>
                                 </li>
