--- a/indexmbs6.html
+++ b/indexmbs6.html
@@ -58,21 +58,21 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY OF HERO MOTORS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF HERO MOTORS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGIES OF AMUL</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGIES OF AMUL</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGIES OF MYNTRA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGIES OF MYNTRA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">PROMOTIONAL STRATEGIES OF ZARA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">PROMOTIONAL STRATEGIES OF ZARA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY OF RED BULL</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF RED BULL</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKET ANALYSIS OF WRIST WATCH</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKET ANALYSIS OF WRIST WATCH</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON AVIATION INDUSTRY IN INDIA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON AVIATION INDUSTRY IN INDIA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">FAILURE OF SMALL SCALE INDUSTRY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">FAILURE OF SMALL SCALE INDUSTRY</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs7.html">More titles</a>
                                 </li>
