--- a/indexmbs7.html
+++ b/indexmbs7.html
@@ -58,19 +58,19 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY OF PHONE PAY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF PHONE PAY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGY OF GOLD LOAN</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGY OF GOLD LOAN</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON INFLUENCE OF CELEBRITY ENDORSEMENT ON</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON INFLUENCE OF CELEBRITY ENDORSEMENT ON</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON THE GST TAX COLLECTED DURING COVID AMIDST SLOWDOWN IN ECONOMY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON THE GST TAX COLLECTED DURING COVID AMIDST SLOWDOWN IN ECONOMY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON STUDENT’S ATTITUDE TOWARDS EDUCATIONAL LOAN REPAYMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON STUDENT’S ATTITUDE TOWARDS EDUCATIONAL LOAN REPAYMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON CONSUMER’S BRAND PREFERENCES TOWARDS USING DTH SERVICE PROVIDERS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON CONSUMER’S BRAND PREFERENCES TOWARDS USING DTH SERVICE PROVIDERS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">INFLUENCE OF CHILDREN ON FAMILY PURCHASE DECISION</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">INFLUENCE OF CHILDREN ON FAMILY PURCHASE DECISION</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs8.html">More titles</a>
                                 </li>
