--- a/indexmbs8.html
+++ b/indexmbs8.html
@@ -58,21 +58,21 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">STUDY ON ELECTRIC VEHICLES IN INDIA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">STUDY ON ELECTRIC VEHICLES IN INDIA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">PROBLEMS OF MANAGING SMALL SCALE BUSINESS IN THE RURAL AREA</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">PROBLEMS OF MANAGING SMALL SCALE BUSINESS IN THE RURAL AREA</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">UNDERSTANDING PAYMENT GATEWAY TRENDS AMONG YOUTH</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">UNDERSTANDING PAYMENT GATEWAY TRENDS AMONG YOUTH</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY OF CONSUMER BEHAVIOR IN REAL ESTATE SECTOR</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY OF CONSUMER BEHAVIOR IN REAL ESTATE SECTOR</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A COMPARATIVE STUDY ON CRITERIA ON ECONOMIC AND PERFORMANCE BASIS FOR HUL AND ITC COMPANIES</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A COMPARATIVE STUDY ON CRITERIA ON ECONOMIC AND PERFORMANCE BASIS FOR HUL AND ITC COMPANIES</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">BRAND IMAGE OF APOLLO TYRES</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">BRAND IMAGE OF APOLLO TYRES</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">COMPARATIVE STUDY OF DIGITAL MARKETING VS TRADITIONAL MARKETING</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">COMPARATIVE STUDY OF DIGITAL MARKETING VS TRADITIONAL MARKETING</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">IMPLICATIONS OF COVID-19 ON TRAVEL AND LEISURE INDUSTRY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">IMPLICATIONS OF COVID-19 ON TRAVEL AND LEISURE INDUSTRY</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs9.html">More titles</a>
                                 </li>
