--- a/indexmbs9.html
+++ b/indexmbs9.html
@@ -58,21 +58,21 @@
                         <h2>MBS projects</h2>
                         <div class="text">
                             <ul>
-                                <li class="item"><a class="titles" href="">ROLE OF DIGITAL MARKETING OVER CONVENTIONAL MARKETING</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">ROLE OF DIGITAL MARKETING OVER CONVENTIONAL MARKETING</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING STRATEGIES OF FACEBOOK</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING STRATEGIES OF FACEBOOK</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON USE OF ICT IN EVENT MANAGEMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON USE OF ICT IN EVENT MANAGEMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A STUDY ON OPERATIONS MANAGEMENT IN EVENT MANAGEMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A STUDY ON OPERATIONS MANAGEMENT IN EVENT MANAGEMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">PROBLEMS FACED BY EVENT MANAGER WHILE DELIVERING THE EVENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">PROBLEMS FACED BY EVENT MANAGER WHILE DELIVERING THE EVENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">MARKETING AND PROMOTIONAL STUDY ON EVENT MANAGEMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">MARKETING AND PROMOTIONAL STUDY ON EVENT MANAGEMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CUSTOMER SATISFACTION AT PACKAGINGS INDUSTRY</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CUSTOMER SATISFACTION AT PACKAGINGS INDUSTRY</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">A COMPARATIVE STUDY ON THE CONSUMER PREFERENCE TOWARDS BRANDED JEWELLERY OVER NON BRANDED</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">A COMPARATIVE STUDY ON THE CONSUMER PREFERENCE TOWARDS BRANDED JEWELLERY OVER NON BRANDED</a>
                                 </li>
                             </ul>
                         </div>
