--- a/index-ma1.html
+++ b/index-ma1.html
@@ -61,37 +61,37 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">5 Speed Gearbox Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">5 Speed Gearbox Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mechanical Bird Flapping Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mechanical Bird Flapping Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design & Fabrication of V8 Engine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of V8 Engine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">DIY Automatic Screen Printing Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Automatic Screen Printing Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized Solar Scarecrow Bird Animal Repellent</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Solar Scarecrow Bird Animal Repellent</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Chain Link Wire Mesh Making Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chain Link Wire Mesh Making Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized Spring Assist Mashing Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Spring Assist Mashing Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Automatic Flipping Plate Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Flipping Plate Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Convex Surface Milling Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Convex Surface Milling Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Springless Car Suspension Using Bevel Gears</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Springless Car Suspension Using Bevel Gears</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mechanical Pick & Place Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mechanical Pick & Place Mechanism</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma2.html">More titles</a>
