--- a/index-ma6.html
+++ b/index-ma6.html
@@ -61,34 +61,34 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="indexA26.html">5 Speed Gearbox Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">5 Speed Gearbox Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA6.html">Mechanical Bird Flapping Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mechanical Bird Flapping Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA33.html">Design & Fabrication of V8 Engine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design & Fabrication of V8 Engine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA14.html">DIY Automatic Screen Printing Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">DIY Automatic Screen Printing Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA35.html">Motorized Solar Scarecrow Bird Animal Repellent</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Solar Scarecrow Bird Animal Repellent</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA36.html">Chain Link Wire Mesh Making Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Chain Link Wire Mesh Making Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA29.html">Motorized Spring Assist Mashing Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Spring Assist Mashing Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA32.htmll">Automatic Flipping Plate Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Automatic Flipping Plate Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA29.html">Convex Surface Milling Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Convex Surface Milling Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="indexA30.html">Springless Car Suspension Using Bevel Gears</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Springless Car Suspension Using Bevel Gears</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="index-ma7.html">More titles</a>
