--- a/index-mi2.html
+++ b/index-mi2.html
@@ -61,43 +61,43 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Table Saw Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Table Saw Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Solenoid Engine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Solenoid Engine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Drill Press Machine Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Drill Press Machine Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Motorized Car & Bus Windshield Wiper Mechanism</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Motorized Car & Bus Windshield Wiper Mechanism</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mini Mechanical Wire & Rod Cutter Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mini Mechanical Wire & Rod Cutter Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Arm Mounted Hammer Drill Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Arm Mounted Hammer Drill Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Pneumatic Arm Hammer Attachment With Nail Puller</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Pneumatic Arm Hammer Attachment With Nail Puller</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">360° Welding Cutting Rotary Turn Table Positioner</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">360° Welding Cutting Rotary Turn Table Positioner</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of External Pipe Climbing Robot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of External Pipe Climbing Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Manually operated Eco-friendly Road and Floor Dust Cleaning Machine</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Manually operated Eco-friendly Road and Floor Dust Cleaning Machine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Design and Fabrication of Pneumatic Vice Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Design and Fabrication of Pneumatic Vice Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Mini Belt grinder Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Mini Belt grinder Project</a>
                                 </li>
                                 <li class="items">
-                                    <a class="titles" href="index-mi3.html">More title</a>
+                                    <a class="titles" href="index-mi3.htmlhttps://wa.me/+918074744190">More title</a>
                                 </li>
                             </ul>
                         </div>
