--- a/indexai2.html
+++ b/indexai2.html
@@ -61,31 +61,31 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Sentiment Based Movie Rating System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Sentiment Based Movie Rating System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Banking Bot Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Banking Bot Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Smart Health Consulting Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Smart Health Consulting Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Heart Disease Prediction Project</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Heart Disease Prediction Project</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Artificial Intelligence Dietician</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Artificial Intelligence Dietician</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Android Smart City Traveler</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Android Smart City Traveler</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Product Review Analysis For Genuine Rating</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Product Review Analysis For Genuine Rating</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">College Enquiry Chat Bot</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">College Enquiry Chat Bot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">TV Show Popularity Analysis Using Data Mining</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">TV Show Popularity Analysis Using Data Mining</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="indexai3.html">More titles</a>
