--- a/indexcse-6.html
+++ b/indexcse-6.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Liver Cirrhosis Prediction System using Random Forest</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Liver Cirrhosis Prediction System using Random Forest</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Multiple Disease Prediction System using Machine Learning</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Multiple Disease Prediction System using Machine Learning</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Secure Persona Prediction and Data Leakage Prevention System using Python</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Secure Persona Prediction and Data Leakage Prevention System using Python</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Stroke Prediction System using Linear Regression</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Stroke Prediction System using Linear Regression</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Skin Disease Detection System Using CNN</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Skin Disease Detection System Using CNN</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Signature Verification System Using CNN</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Signature Verification System Using CNN</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Heart Failure Prediction System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Heart Failure Prediction System</a>
                                 </li>
                             </ul>
                         </div>
