--- a/indexdr5.html
+++ b/indexdr5.html
@@ -61,25 +61,25 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">Solar Wireless Electric Vehicle Charging System</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Solar Wireless Electric Vehicle Charging System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Analysis and Design of a Single-Stage Isolated AC–DC LED Driver with a Voltage Doubler Rectifier</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Analysis and Design of a Single-Stage Isolated AC–DC LED Driver with a Voltage Doubler Rectifier</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">A Four-Switch Single-Stage Single-Phase Buck–Boost Inverter. </a>
+                                    <a class="titles" href="https://wa.me/+918074744190">A Four-Switch Single-Stage Single-Phase Buck–Boost Inverter. </a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Control of a Hybrid AC/DC Micro-grid Involving Energy Storage and Pulsed Load</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Control of a Hybrid AC/DC Micro-grid Involving Energy Storage and Pulsed Load</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Novel Isolated Power Conditioning Unit for Micro Wind Turbine Application</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Novel Isolated Power Conditioning Unit for Micro Wind Turbine Application</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Bipolar Operation Investigation of Current Source Converter-Based Wind Energy Conversion Systems</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Bipolar Operation Investigation of Current Source Converter-Based Wind Energy Conversion Systems</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">Replacing the Grid Interface Transformer in Wind Energy Conversion System with Solid-State Transformer</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">Replacing the Grid Interface Transformer in Wind Energy Conversion System with Solid-State Transformer</a>
                                 </li>
                             </ul>
                         </div>
