--- a/indexmbs3.html
+++ b/indexmbs3.html
@@ -59,21 +59,21 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">MUTUAL FUNDS INDUSTRY IN INDIA AND ITS COMPARATIVE ANALYSIS</a>
+                                    <a class="titles" href="https://wa.me/+918074744190">MUTUAL FUNDS INDUSTRY IN INDIA AND ITS COMPARATIVE ANALYSIS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">NEED OF FINANCIAL ADVISORS FOR MUTUAL FUND INVESTORS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">NEED OF FINANCIAL ADVISORS FOR MUTUAL FUND INVESTORS</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">OVERVIEW OF THE INDIAN FINANCIAL MARKET IN RESPECT TO INDIAN STOCK MARKET</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">OVERVIEW OF THE INDIAN FINANCIAL MARKET IN RESPECT TO INDIAN STOCK MARKET</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER BUYING BEHAVIOR TOWARDS PAINT SEGMENT</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER BUYING BEHAVIOR TOWARDS PAINT SEGMENT</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">COMPARATIVE ANALYSIS OF VARIOS BRANDED FOOTWEAR IN DELHI NCR</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">COMPARATIVE ANALYSIS OF VARIOS BRANDED FOOTWEAR IN DELHI NCR</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">COMPARATIVE MARKET STUDY FOR SALES OF HINDWARE KITCHEN SINK & NIRALI KITCHEN SINK</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">COMPARATIVE MARKET STUDY FOR SALES OF HINDWARE KITCHEN SINK & NIRALI KITCHEN SINK</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CONSUMER PERCEPTION OF MOHAN MEAKIN</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CONSUMER PERCEPTION OF MOHAN MEAKIN</a>
                                 </li>
-                                <li class="item"><a class="titles" href="">CUSTOMER SATISFACTION LEVEL AT SG CRICKET BATS</a>
+                                <li class="item"><a class="titles" href="https://wa.me/+918074744190">CUSTOMER SATISFACTION LEVEL AT SG CRICKET BATS</a>
                                 </li>
                                 <li class="items"><a class="title" href="indexmbs4.html">More titles</a>
                                 </li>
